# nox

./: CMakeLists.txt  NoxConfig.cmake
cmake/: FindNox.cmake
include/nox/: plot.hpp  vis.hpp  widget.hpp
test/: CMakeLists.txt  test_plot.cpp  test_vis.cpp  test_widget.cpp
